--- a/accounts/templates/accounts/account.html
+++ b/accounts/templates/accounts/account.html
@@ -71,75 +71,48 @@
 
   {% if user == account %}
   <!-- SHOW LIST OF RELATIONS -->
-  <div class="my-10 p-4 bg-base-200 rounded-xl">
-    <div class="flex gap-4 items-center">
+  <div class="my-10 p-4 bg-base-200 w-full max-w-4xl rounded-xl">
+    <div class="py-2 flex gap-4 items-center">
       <h1 class="text-2xl font-semibold">Related accounts</h1>
       <svg class="w-5 h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52" enable-background="new 0 0 52 52" xml:space="preserve" transform="rotate(-45)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <path d="M17.3,36.1l-1.1-1.4c0,0-0.7-1-0.9-1.6c-0.2-0.3-0.5-0.5-0.9-0.5h-0.6c-3.5,0-6.5-2.6-6.7-6 c-0.3-3.8,2.8-6.9,6.5-6.9h9.1c1.2,0,2.3,0.4,3.2,0.8c1.2,0.7,2.2,1.8,2.7,3.1c0.3,0.8,0.5,1.6,0.5,2.6c0,0.5-0.1,0.9-0.2,1.4 c-0.2,0.7,0.3,1.3,1,1.2l3.4,0c0.5,0,0.8-0.4,1-0.8c0.1-0.6,0.1-1.2,0.1-1.8c0-0.8-0.1-1.7-0.3-2.6c-0.3-1.4-0.9-2.7-1.7-3.9 c-1.5-2.2-3.8-4-6.4-4.7c-1-0.3-2.2-0.5-3.2-0.5H14c-6.3,0-11.7,4.9-11.9,11.2c-0.3,6.6,5,12.1,11.6,12.1h3 C17.4,37.7,17.8,36.7,17.3,36.1z M49.9,25.6c-0.2-6.3-5.6-11.3-11.9-11.2l-2.7-0.1c-0.8,0-1.3,1-0.8,1.6c0.8,0.9,1.4,1.9,2,3 c0.2,0.3,0.5,0.5,0.9,0.5H38c3.5,0,6.5,2.6,6.7,6c0.3,3.8-2.8,6.9-6.5,6.9l-9.1,0c-1.2,0-2.3-0.4-3.2-0.8c-1.2-0.7-2.2-1.8-2.7-3.1 c-0.3-0.8-0.5-1.6-0.5-2.6c0-0.5,0.1-0.9,0.2-1.4c0.2-0.7-0.3-1.3-1-1.2h-3.4c-0.5,0-0.8,0.4-1,0.8c-0.1,0.6-0.1,1.2-0.1,1.8 c0,0.8,0.1,1.8,0.3,2.6c0.3,1.4,0.9,2.7,1.7,3.8c1.5,2.2,3.8,4,6.4,4.7c1,0.3,2.2,0.5,3.2,0.5l9.1,0C44.8,37.7,50.1,32.2,49.9,25.6 z"></path> </g> </g></svg>
     </div>
 
+    {% if relations %}
+    <div class="overflow-x-auto">
+      <table class="table">
 
-    {% if user_friends_to or user_friends_from %}
-      <div class="overflow-x-auto">
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Related accounts</th>
-              <th>Relation</th>
-            </tr>
-          </thead>
-          {% for user in user_friends_to %}
+        {% for relation in relations %}
           <tbody>
             <tr class="hover">
-              <th>
-                <a href="{% url 'accounts:account_view' user.user_receiving.id %}" class="cursor-pointer">
+              <th class="p-2">
+                <a href="{% if user != relation.user_sending %}{% url 'accounts:account_view' relation.user_sending.id %}{% elif user != relation.user_receiving %}{% url 'accounts:account_view' relation.user_receiving.id %}{% endif %}" class="cursor-pointer">
                   <div class="flex items-center space-x-3">
                     <div class="avatar">
                       <div class="mask mask-squircle w-10 h-10">
-                        <img src="{% if user.user_receiving.profile_picture %}{{user.user_receiving.profile_picture.url}}{% else %} {% endif %}" alt="Avatar Tailwind CSS Component" />
+                        <img src="{% if user != relation.user_sending %}{{relation.user_sending.profile_picture.url}}{% elif user != relation.user_receiving %}{{relation.user_receiving.profile_picture.url}} {% endif %}" alt="Avatar Tailwind CSS Component" />
                       </div>
                     </div>
                     <div>
-                      <div class="font-bold">{% if user.user_receiving.first_name or user.user_receiving.last_name %}{{user.user_receiving.first_name}} {{user.user_receiving.last_name}}{% else %}-{% endif %}</div>
-                      <div class="text-sm opacity-50">{{user.user_receiving.email}}</div>
+                      <div class="font-bold">
+                        {% if user != relation.user_sending %}
+                          {% firstof relation.user_sending.first_name relation.user_sending.last_name "-" %}
+                        {% elif user != relation.user_receiving %}
+                          {% firstof relation.user_receiving.first_name relation.user_receiving.last_name "-" %}
+                        {% endif %}
+                      </div>
+                      <div class="text-sm opacity-50">{% if user != relation.user_sending %}{{relation.user_sending.email|truncatechars:12}}{% elif user != relation.user_receiving %}{{relation.user_receiving.email|truncatechars:12}}{% endif %}</div>
                     </div>
                   </div>
                 </a>
               </th>
-              <th>{{user.relation_type}}</th>
+              <th class="p-2">{{relation.relation_type}}</th>
             </tr>
           </tbody>
-          {% endfor %}
-          {% for user in user_friends_from %}
-          <tbody>
-            <tr class="hover">
-              <th>
-                <a href="{% url 'accounts:account_view' user.user_sending.id %}" class="cursor-pointer">
-                  <div class="flex items-center space-x-3">
-                    <div class="avatar">
-                      <div class="mask mask-squircle w-10 h-10">
-                        <img src="{% if user.user_sending.profile_picture %}{{user.user_sending.profile_picture.url}}{% else %} {% endif %}" alt="Avatar Tailwind CSS Component" />
-                      </div>
-                    </div>
-                    <div>
-                      <div class="font-bold">{% if user.user_sending.first_name or user.user_sending.last_name %}{{user.user_sending.first_name}} {{user.user_receiving.last_name}}{% else %}-{% endif %}</div>
-                      <div class="text-sm opacity-50">{{user.user_sending.email}}</div>
-                    </div>
-                  </div>
-                </a>
-              </th>
-              <th>{{user.relation_type}}</th>
-            </tr>
-          </tbody>
-          {% endfor %}
-        </table>
-      </div>
-      {% else %}
-        <div>
-          <h2 class="my-4 text-sm "> No relations yet..!</h2>
-          <svg class=" w-8 h-8 fill-current"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52" enable-background="new 0 0 52 52" xml:space="preserve" transform="rotate(180)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <path d="M43.6,21.1L27.2,2.5c-0.6-0.7-1.8-0.7-2.4,0L8.4,21.1C7.8,21.8,8.3,23,9.3,23H17v12.5 c0,0.8,0.7,1.5,1.5,1.5h15c0.8,0,1.5-0.7,1.5-1.5V23h7.7C43.7,23,44.2,21.8,43.6,21.1z"></path> <path d="M33.5,43h-15c-0.8,0-1.5,0.7-1.5,1.5v4c0,0.8,0.7,1.5,1.5,1.5h15c0.8,0,1.5-0.7,1.5-1.5v-4 C35,43.7,34.3,43,33.5,43z"></path> </g> </g></svg>
-        </div>
+        {% endfor %}
       {% endif %}
+      </table>
     </div>
+  </div>
 
 <!-- SEARCH BAR FOR OTHER USERS-->
     <div class="my-10">
@@ -156,7 +129,6 @@
           <thead>
             <tr>
               <th>User</th>
-              <th>Relation</th>
             </tr>
           </thead>
           {% for user in searched_users %}
@@ -177,7 +149,6 @@
                   </div>
                 </a>
               </th>
-              <th></th>
             </tr>
           </tbody>
           {% endfor %}
