--- a/albums/templates/albums/album_detail.html
+++ b/albums/templates/albums/album_detail.html
@@ -94,16 +94,20 @@
       <!-- Who has access -->
     {% if user == album.creator %}
     <div class="flex place-content-end">
-      <a href="{% url 'access:album-access' album.pk %}" class="hover:bg-blue-100/50 hover:rounded-xl px-6 hover:px-6 pb-4 hover:pb-4">
+      <a href="{% url 'access:album-access' album.pk %}" class="hover:btn-ghost hover:rounded-xl px-6 hover:px-6 pb-4 hover:pb-4">
         <div class="mt-6">
           <div class="flex items-center space-x-2 text-base">
-            <h4 class="font-semibold">Having access: </h4>
-            <span class="rounded-full bg-slate-100 px-2 py-1 text-xs font-semibold">{{users_with_access_count}}</span>
+            <h4 class="font-semibold">Shared with: </h4>
+            <div class="badge badge-outline badge-accent">{{users_with_access_count}}</div>
           </div>
           <div class="tooltip tooltip-bottom" data-tip="{% for user in users_with_access %}{% firstof user.first_name user %}{% if forloop.last %}{% else %}, {% endif %}{% endfor %}">
-            <div class="mt-3 flex -space-x-2 overflow-hidden">
+            <div class="avatar-group -space-x-6">
               {% for user in users_with_access %}
-                <img class="inline-block h-12 w-12 rounded-full ring-2 ring-white" src="{{user.profile_picture.url}}" alt="{% firstof user.first_name user.email %}'s profile pic">
+                <div class="avatar">
+                  <div class="w-12">
+                    <img src="{{user.profile_picture.url}}" alt="{% firstof user.first_name user.email %}'s profile pic">
+                  </div>
+                </div>
               {% endfor %}
             </div>
           </div>
