--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -16,11 +16,12 @@
       <div class="flex-1">
         <a href="/" class="btn btn-ghost normal-case text-xl">Family Book</a>
       </div>
+      {% if request.user.is_authenticated %}
       <div class="flex-none">
         <ul class="menu menu-horizontal px-1">
-          <li><a href="{% url 'albums:albums_view' %}">My Albums</a></li>
+
         </ul>
-        <div class="dropdown dropdown-end">
+        <div class="dropdown dropdown-end px-2 py-1">
           <label tabindex="0" class="btn btn-ghost btn-circle avatar">
             <div class="w-10 rounded-full">
               {% if user.profile_picture %}
@@ -34,16 +35,14 @@
             </div>
           </label>
           <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+            <li><a href="{% url 'albums:albums_view' %}">My Albums</a></li>
             <li>
               <a href="{% url 'accounts:account_view' user.pk %}" class="justify-between">
                 Profile
-                <span class="badge">New</span>
+                <!-- <span class="badge">New</span> -->
               </a>
             </li>
-            <li><a href="{% url 'albums:albums_view' %}">Albums</a></li>
-            <li>
-            </li>
-            <li><a>Settings</a></li>
+
             <li>
               <a class="justify-between">
                 Theme
@@ -63,10 +62,11 @@
                 </span>
               </a>
             </li>
-            <li><a class="text-red-700 font-semibold">Logout</a></li>
+            <li><a href="{% url 'accounts:logout' %}" class="text-red-700 font-semibold">Logout</a></li>
           </ul>
         </div>
       </div>
+      {% endif %}
     </div>
   </header>
 
