--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -10,7 +10,7 @@
     <div class="max-w-md">
       <h1 class="mb-5 text-5xl font-bold">Precious moments</h1>
       <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-      <button class="btn btn-accent">Get Started</button>
+      <a href="{% url 'accounts:register' %}" class="btn btn-accent">Get Started</a>
     </div>
   </div>
 </div>
