--- a/accounts/templates/partials/account_connections_list.html
+++ b/accounts/templates/partials/account_connections_list.html
@@ -17,20 +17,18 @@
               <div class="flex items-center space-x-3">
                 <div class="avatar">
                   <div class="mask mask-squircle w-10 h-10">
-                    {% if relation_user.profile_picture.url != default_pic %}
+                    {% if relation_user.profile_picture %}
                       {% thumbnail relation_user.profile_picture "50x50" crop="center" as im %}
-                        <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{% firstof relation_user.first_name relation_user.email %}'s profile pic" class="h-full w-full object-cover object-center group-hover:opacity-75">
+                        <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{% firstof relation_user.get_full_name relation_user.email %}'s profile pic" class="h-full w-full object-cover object-center group-hover:opacity-75">
                       {% endthumbnail %}
                     {% else %}
-                      {% thumbnail "default_avatar.jpg"|static_image "50x50" crop="center" as im %}
-                          <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{% firstof relation_user.first_name relation_user.email %}'s profile pic" class="h-full w-full object-cover object-center group-hover:opacity-75">
-                      {% endthumbnail %}
+                      <img src="https://api.dicebear.com/6.x/initials/svg?seed={% firstof relation_user.get_full_name relation_user.email %}" width="50" height="50" alt="{% firstof relation_user.get_full_name relation_user.email %}'s profile pic" class="h-full w-full object-cover object-center group-hover:opacity-75">
                     {% endif %}
                   </div>
                 </div>
                 <div>
                   <div class="font-bold">
-                    {% firstof relation_user.first_name relation_user.last_name "-" %}
+                    {% firstof relation_user.get_full_name "-" %}
                   </div>
                   <div class="text-sm opacity-50">
                     {{relation_user.email|truncatechars:12}}
