--- a/accounts/templates/partials/account_connections_searchbar.html
+++ b/accounts/templates/partials/account_connections_searchbar.html
@@ -23,11 +23,11 @@
               <div class="flex items-center space-x-3">
                 <div class="avatar">
                   <div class="mask mask-squircle w-12 h-12">
-                    <img src="{% if searched_user.profile_picture %}{{searched_user.profile_picture.url}}{% else %} {% endif %}" alt="Avatar Tailwind CSS Component" />
+                    <img src="{% if searched_user.profile_picture %}{{searched_user.profile_picture.url}}{% else %}https://api.dicebear.com/6.x/initials/svg?seed={% firstof searched_user.get_full_name searched_user.email %}{% endif %}" alt="Avatar Tailwind CSS Component" />
                   </div>
                 </div>
                 <div>
-                  <div class="font-bold">{% firstof searched_user.first_name searched_user.last_name "-" %}</div>
+                  <div class="font-bold">{% firstof searched_user.get_full_name "-" %}</div>
                   <div class="text-sm opacity-50">{{searched_user.email}}</div>
                 </div>
               </div>
