--- a/albums/templates/albums/album_confirm_delete.html
+++ b/albums/templates/albums/album_confirm_delete.html
@@ -24,7 +24,7 @@
       {% csrf_token %}
       <div class="flex gap-2 py-4 justify-center">
         <input type="submit" value="Yes" class="btn btn-error hover:brightness-75">
-        <a href="{% url 'access:album-access' album.pk %}" class="btn btn-neutral">No</a>
+        <a href="{% url 'albums:album-access' album.pk %}" class="btn btn-neutral">No</a>
       </div>
 
 
