--- a/static/css/output.css
+++ b/static/css/output.css
@@ -2453,6 +2453,14 @@ html {
   --alert-bg-mix: hsl(var(--b1));
 }
 
+.alert-warning {
+  border-color: hsl(var(--wa) / 0.2);
+  --tw-text-opacity: 1;
+  color: hsl(var(--wac) / var(--tw-text-opacity));
+  --alert-bg: hsl(var(--wa));
+  --alert-bg-mix: hsl(var(--b1));
+}
+
 .alert-error {
   border-color: hsl(var(--er) / 0.2);
   --tw-text-opacity: 1;
@@ -4236,6 +4244,10 @@ details.collapse summary::-webkit-details-marker {
 
 .visible {
   visibility: visible;
+}
+
+.invisible {
+  visibility: hidden;
 }
 
 .collapse {
