--- a/photos/templates/photos/photo_edit.html
+++ b/photos/templates/photos/photo_edit.html
@@ -18,6 +18,10 @@
 
   <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
+    <div class="grid grid-cols-1 mb-6">
+      <!-- <textarea class="textarea textarea-bordered" name="description" id="" cols="30" rows="2">{{photo.description}}</textarea> -->
+      {{form_description_form}}
+    </div>
     <div class="flex flex-col w-full lg:flex-row">
       <div class="grid flex-grow h-24 lg:h-32 card bg-base-300 rounded-box place-items-center">
         <div class="flex gap-4">
